<resources>
    <string name="app_name">ToDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_your_work">Manage all of your work in one place efficiently</string>
    <string name="get_started">Get started</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="add_note">Add note</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome">Welcome</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="sign_out">Sign out</string>
    <string name="add">Add</string>
    <string name="have_an_account">have an account?</string>
    <string name="first_step_to_invade_the_world_is">First step to invade the world is..</string>
    <string name="delete_completed">Delete completed</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_valid_pass">Please enter valid password</string>
    <string name="pass_dont_match">Passwords don\'t match</string>
    <string name="today">Today</string>
    <string name="invade_the_world">Invade the world</string>
</resources>